--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@
                 <h2>Tú Ante Mis Ojos</h2>
                 <p>Lo que veo cuando te miro y todo lo que significas para mí.</p>
             </a>
+
+            <a href="constelacion.html" class="nav-card">
+              <img src="./imagenes/estrella.png" alt="Constelación">
+              <h2>Constelación de Ti</h2>
+              <p>Haz clic en cada estrella para descubrir lo que brilla en mi corazón por ti.</p>
+            </a>
+
         </div>
 
         <div class="message-box">
