--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <p>Lo que veo cuando te miro y todo lo que significas para mí.</p>
             </a>
 
-            <a href="constelacion.html" class="nav-card">
+            <a href="constelación.html" class="nav-card">
               <img src="./imagenes/estrella.png" alt="Constelación">
               <h2>Constelación de Ti</h2>
               <p>Haz clic en cada estrella para descubrir lo que brilla en mi corazón por ti.</p>
