--- a/constelacion.html
+++ b/constelacion.html
@@ -2,132 +2,317 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Constelación de Ti ✨</title>
+  <title>Constelación de Ti ✨ - 22/07/2022</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+    
     body {
       margin: 0;
-      background: #000;
+      background: radial-gradient(ellipse at center, #1a0033 0%, #000000 70%);
       font-family: 'Poppins', sans-serif;
       color: white;
       overflow: hidden;
       position: relative;
+      height: 100vh;
+    }
+
+    /* Estrellas de fondo animadas */
+    .background-stars {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
+
+    .bg-star {
+      position: absolute;
+      background: white;
+      border-radius: 50%;
+      animation: twinkle 3s infinite alternate;
+    }
+
+    @keyframes twinkle {
+      0% { opacity: 0.3; transform: scale(1); }
+      100% { opacity: 1; transform: scale(1.2); }
     }
 
     .background-image {
       position: fixed;
       top: 50%;
       left: 50%;
-      width: 700px;
-      height: 700px;
-      background: url('./imagenes/a219837a-5d21-45db-bb14-db6549bcd7de.png') no-repeat center center;
-      background-size: cover;
+      width: 800px;
+      height: 800px;
+      background: radial-gradient(circle, rgba(110, 64, 201, 0.3) 0%, rgba(110, 64, 201, 0.1) 50%, transparent 70%);
       transform: translate(-50%, -50%);
-      opacity: 0.3;
       border-radius: 50%;
-      z-index: 0;
-      box-shadow: 0 0 80px 20px #6e40c9aa;
+      z-index: 1;
+      animation: pulse 4s ease-in-out infinite;
     }
 
-    .star {
+    @keyframes pulse {
+      0%, 100% { transform: translate(-50%, -50%) scale(1); opacity: 0.3; }
+      50% { transform: translate(-50%, -50%) scale(1.05); opacity: 0.5; }
+    }
+
+    .constellation-star {
       position: absolute;
-      width: 10px;
-      height: 10px;
-      background: #ffffff;
       border-radius: 50%;
       cursor: pointer;
-      box-shadow: 0 0 6px #fff;
-      transition: transform 0.2s;
-      z-index: 1;
+      transition: all 0.3s ease;
+      z-index: 3;
+      box-shadow: 0 0 20px currentColor;
     }
 
-    .star:hover {
-      transform: scale(1.5);
+    .constellation-star.main {
+      width: 16px;
+      height: 16px;
+      background: #ffd700;
+      color: #ffd700;
+      animation: mainStarPulse 2s ease-in-out infinite;
     }
 
-    .line {
+    .constellation-star.secondary {
+      width: 12px;
+      height: 12px;
+      background: #87ceeb;
+      color: #87ceeb;
+    }
+
+    .constellation-star.minor {
+      width: 8px;
+      height: 8px;
+      background: #ffffff;
+      color: #ffffff;
+    }
+
+    @keyframes mainStarPulse {
+      0%, 100% { transform: scale(1); box-shadow: 0 0 20px currentColor; }
+      50% { transform: scale(1.3); box-shadow: 0 0 30px currentColor; }
+    }
+
+    .constellation-star:hover {
+      transform: scale(2);
+      box-shadow: 0 0 40px currentColor;
+    }
+
+    .constellation-line {
       position: absolute;
-      background: rgba(255, 255, 255, 0.25);
+      background: linear-gradient(90deg, rgba(255, 255, 255, 0.6), rgba(135, 206, 235, 0.4));
       height: 2px;
       transform-origin: left center;
-      z-index: 0;
+      z-index: 2;
+      animation: lineGlow 3s ease-in-out infinite alternate;
+    }
+
+    @keyframes lineGlow {
+      0% { opacity: 0.4; }
+      100% { opacity: 0.8; }
     }
 
     .message-box {
       position: fixed;
-      bottom: 30px;
+      bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px 30px;
-      border-radius: 12px;
-      max-width: 80%;
-      backdrop-filter: blur(6px);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      font-size: 1.1rem;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 25px 35px;
+      border-radius: 20px;
+      max-width: 85%;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255, 215, 0, 0.3);
+      font-size: 1.2rem;
       text-align: center;
-      z-index: 2;
+      z-index: 4;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+      animation: messageFloat 3s ease-in-out infinite;
+    }
+
+    @keyframes messageFloat {
+      0%, 100% { transform: translateX(-50%) translateY(0); }
+      50% { transform: translateX(-50%) translateY(-5px); }
     }
 
     .title {
       text-align: center;
-      margin-top: 20px;
-      font-size: 2.2rem;
-      color: #e0caff;
-      z-index: 2;
+      margin-top: 30px;
+      font-size: 2.5rem;
+      font-weight: 600;
+      background: linear-gradient(45deg, #ffd700, #87ceeb, #dda0dd);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      z-index: 4;
       position: relative;
+      text-shadow: 0 0 20px rgba(255, 215, 0, 0.5);
+    }
+
+    .date-stamp {
+      text-align: center;
+      margin-top: 10px;
+      font-size: 1.1rem;
+      color: #dda0dd;
+      font-weight: 300;
+      z-index: 4;
+      position: relative;
+    }
+
+    .shooting-star {
+      position: absolute;
+      width: 2px;
+      height: 2px;
+      background: white;
+      border-radius: 50%;
+      z-index: 1;
+    }
+
+    @keyframes shoot {
+      0% {
+        transform: translateX(0) translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(300px) translateY(300px);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
-
+  <div class="background-stars" id="backgroundStars"></div>
   <div class="background-image"></div>
-
-  <div class="title">✨ Mi constelación favorita... Tú ✨</div>
-  <div class="message-box" id="message">Haz clic en una estrella para ver lo que siento ✨</div>
+  
+  <div class="title">✨ Mi Constelación del Amor ✨</div>
+  <div class="date-stamp">22 de Julio, 2022 - 7:05 PM</div>
+  
+  <div class="message-box" id="message">
+    Haz clic en cualquier estrella para descubrir lo que siento por ti ✨
+  </div>
 
   <script>
-    const stars = [
-      { x: 300, y: 300, message: "Eres mi paz en medio del caos." },
-      { x: 380, y: 240, message: "Tu risa es mi sonido favorito." },
-      { x: 460, y: 320, message: "Desde que llegaste, todo brilla más." },
-      { x: 540, y: 280, message: "Tu mirada tiene el poder de calmarme." },
-      { x: 600, y: 360, message: "Amarte es la decisión más fácil que he tomado." },
-      { x: 480, y: 400, message: "Cada día contigo es un regalo del universo." },
-      { x: 370, y: 400, message: "Tus abrazos curan todo en mí." },
-      { x: 430, y: 460, message: "Eres mi constelación preferida desde 22/07/22." }
+    // Constelación principal en forma de corazón con más estrellas
+    const constellationStars = [
+      // Corazón principal
+      { x: 400, y: 200, type: 'main', message: "Eres la estrella más brillante en mi universo." },
+      { x: 350, y: 180, type: 'secondary', message: "Tu amor ilumina cada rincón de mi alma." },
+      { x: 450, y: 180, type: 'secondary', message: "Desde el 22/07/2022, mi vida cambió para siempre." },
+      { x: 320, y: 220, type: 'minor', message: "Tu sonrisa es mi constelación favorita." },
+      { x: 480, y: 220, type: 'minor', message: "Cada momento contigo es mágico." },
+      { x: 300, y: 280, type: 'secondary', message: "Eres mi paz en medio de cualquier tormenta." },
+      { x: 500, y: 280, type: 'secondary', message: "Tu abrazo es mi hogar." },
+      { x: 320, y: 340, type: 'minor', message: "Tu risa es la música más hermosa." },
+      { x: 480, y: 340, type: 'minor', message: "Amarte es la aventura más bella." },
+      { x: 360, y: 380, type: 'secondary', message: "Tus ojos son mi cielo estrellado." },
+      { x: 440, y: 380, type: 'secondary', message: "Contigo, cada día es extraordinario." },
+      { x: 400, y: 420, type: 'main', message: "Mi amor por ti es infinito como las estrellas." },
+      
+      // Estrellas adicionales para formar una constelación más compleja
+      { x: 280, y: 150, type: 'minor', message: "Eres mi inspiración diaria." },
+      { x: 520, y: 150, type: 'minor', message: "Tu amor me hace mejor persona." },
+      { x: 250, y: 250, type: 'minor', message: "Eres mi sueño hecho realidad." },
+      { x: 550, y: 250, type: 'minor', message: "Tu corazón es mi lugar favorito." },
+      { x: 200, y: 320, type: 'minor', message: "Eres mi complemento perfecto." },
+      { x: 600, y: 320, type: 'minor', message: "Tu amor es mi fortaleza." },
+      { x: 280, y: 450, type: 'minor', message: "Juntos somos invencibles." },
+      { x: 520, y: 450, type: 'minor', message: "Eres mi para siempre." }
+    ];
+
+    // Conexiones para formar la constelación
+    const connections = [
+      [0, 1], [0, 2], [1, 3], [2, 4], [3, 5], [4, 6],
+      [5, 7], [6, 8], [7, 9], [8, 10], [9, 11], [10, 11],
+      [12, 1], [13, 2], [14, 5], [15, 6], [16, 9], [17, 10],
+      [18, 9], [19, 10], [0, 11]
     ];
 
     const container = document.body;
     const messageBox = document.getElementById("message");
 
-    stars.forEach((star, index) => {
-      const starEl = document.createElement("div");
-      starEl.classList.add("star");
-      starEl.style.left = star.x + "px";
-      starEl.style.top = star.y + "px";
-      starEl.onclick = () => {
-        messageBox.textContent = star.message;
-      };
-      container.appendChild(starEl);
+    // Crear estrellas de fondo
+    function createBackgroundStars() {
+      const starsContainer = document.getElementById('backgroundStars');
+      for (let i = 0; i < 100; i++) {
+        const star = document.createElement('div');
+        star.className = 'bg-star';
+        star.style.left = Math.random() * 100 + '%';
+        star.style.top = Math.random() * 100 + '%';
+        star.style.width = (Math.random() * 3 + 1) + 'px';
+        star.style.height = star.style.width;
+        star.style.animationDelay = Math.random() * 3 + 's';
+        starsContainer.appendChild(star);
+      }
+    }
 
-      if (index < stars.length - 1) {
-        const next = stars[index + 1];
-        const dx = next.x - star.x;
-        const dy = next.y - star.y;
+    // Crear estrellas de la constelación
+    function createConstellation() {
+      constellationStars.forEach((star, index) => {
+        const starEl = document.createElement("div");
+        starEl.classList.add("constellation-star", star.type);
+        starEl.style.left = star.x + "px";
+        starEl.style.top = star.y + "px";
+        starEl.onclick = () => {
+          messageBox.textContent = star.message;
+          // Efecto especial al hacer clic
+          starEl.style.animation = 'mainStarPulse 0.5s ease-in-out';
+          setTimeout(() => {
+            starEl.style.animation = star.type === 'main' ? 'mainStarPulse 2s ease-in-out infinite' : '';
+          }, 500);
+        };
+        container.appendChild(starEl);
+      });
+
+      // Crear líneas de conexión
+      connections.forEach(([startIndex, endIndex]) => {
+        const start = constellationStars[startIndex];
+        const end = constellationStars[endIndex];
+        const dx = end.x - start.x;
+        const dy = end.y - start.y;
         const distance = Math.sqrt(dx * dx + dy * dy);
         const angle = Math.atan2(dy, dx) * 180 / Math.PI;
 
         const line = document.createElement("div");
-        line.classList.add("line");
+        line.classList.add("constellation-line");
         line.style.width = distance + "px";
-        line.style.left = star.x + "px";
-        line.style.top = star.y + "px";
+        line.style.left = start.x + "px";
+        line.style.top = start.y + "px";
         line.style.transform = `rotate(${angle}deg)`;
+        line.style.animationDelay = Math.random() * 2 + 's';
         container.appendChild(line);
-      }
-    });
-  </script>
+      });
+    }
 
+    // Crear estrella fugaz ocasional
+    function createShootingStar() {
+      const shootingStar = document.createElement('div');
+      shootingStar.className = 'shooting-star';
+      shootingStar.style.left = Math.random() * 200 + 'px';
+      shootingStar.style.top = Math.random() * 200 + 'px';
+      shootingStar.style.animation = 'shoot 2s linear';
+      shootingStar.style.boxShadow = '0 0 10px white';
+      container.appendChild(shootingStar);
+
+      setTimeout(() => {
+        shootingStar.remove();
+      }, 2000);
+    }
+
+    // Inicializar
+    createBackgroundStars();
+    createConstellation();
+
+    // Crear estrellas fugaces cada 8-15 segundos
+    setInterval(() => {
+      if (Math.random() < 0.3) {
+        createShootingStar();
+      }
+    }, 8000 + Math.random() * 7000);
+
+    // Mensaje inicial especial
+    setTimeout(() => {
+      messageBox.textContent = "Una constelación creada especialmente para ti, mi amor ✨";
+    }, 2000);
+  </script>
 </body>
 </html>
