Update index.html image

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </a>
 
             <a href="constelacion.html" class="nav-card">
-              <img src="./imagenes/estrella.png" alt="Constelación">
+              <img src="./imagenes/constelacion.png" alt="Constelación">
               <h2>Constelación de Ti</h2>
               <p>Haz clic en cada estrella para descubrir lo que brilla en mi corazón por ti.</p>
             </a>
