--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <p>Eres esa calma que necesito, la alegría que me inspira, y el amor que me da fuerza. Este espacio es solo un reflejo de todo lo que siento por ti: ternura, gratitud, admiración y un cariño que crece con cada momento que compartimos.</p>
             <p>Espero que al leer esto sientas un poco de todo lo que llevo dentro. Porque si pudiera, te regalaría el universo entero… pero por ahora, te entrego esto, con todo mi corazón</p>
             <p>Con todo mi amor,</p>
-            <p>Adrián (Tu Amor - Tu Pollito)</p>
+            <p>Adrián (Tu Novio)</p>
         </div>
     </div>
 
